--- a/.github/workflows/build_and_deploy_to_nuget.yml
+++ b/.github/workflows/build_and_deploy_to_nuget.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
+    - name: Setup MSBuild
+      uses: microsoft/setup-msbuild@v1
+
     - name: Build Project with MSBuild
       run: msbuild /p:Configuration=Release
 
