--- a/.github/workflows/build_and_deploy_to_nuget.yml
+++ b/.github/workflows/build_and_deploy_to_nuget.yml
@@ -14,6 +14,12 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
+    - name: Setup NuGet
+      uses: NuGet/setup-nuget@v1
+
+    - name: Restore NuGet packages
+      run: nuget restore
+
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1
 
