--- a/SearchableComboBox.csproj
+++ b/SearchableComboBox.csproj
@@ -17,8 +17,8 @@
     <Copyright>Licensed under MIT</Copyright>
     <PackageProjectUrl>https://github.com/melsawy93/SearchableComboBox</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,7 +31,6 @@
   <ItemGroup>
     <None Remove=".gitattributes" />
     <None Remove=".gitignore" />
-    <None Remove="LICENSE.txt" />
     <None Remove="README.md" />
   </ItemGroup>
 
@@ -50,6 +49,13 @@
 
   <ItemGroup>
     <PackageReference Include="PresentationFramework.Aero2" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
